--- a/style.css
+++ b/style.css
@@ -1,7 +1,8 @@
 @charset "UTF-8";
 
 body {
-background: #edf0f1;
+    background: #edf0f1;
+    padding:90px 0 0 0;
 }
 
 body, input, button {
@@ -9,7 +10,7 @@ body, input, button {
 }
 
 header {
-    width:93%;
+    width:100%;
     height:80px;
     position: fixed;
     padding: 15px;
@@ -96,4 +97,38 @@ header button {
 
 .add .fill {
     fill:#25b99a;
+}
+
+.container {
+    width: 100%;
+    float: left;
+    padding: 15px;
+}
+
+ul.todo {
+    width: 100%;
+    float:left;
+}
+
+ul.todo li {
+    width: 100%;
+    float: left;
+    height: 50px;
+    background: #fff;
+    border-radius: 5px;
+    position: relative;
+    box-shadow: 0px 1px 2px rgba(44, 62, 80, 0.10);
+    margin: 0 0 10px 0;
+}
+
+ul.todo li:last-of-type {
+    margin:0;
+}
+
+ul.todo li.buttons {
+    width: 100px;
+    height: 50px;
+    position: absolute;
+    top: 0;
+    right: 0;
 }
